update ILTA logo

--- a/index.html
+++ b/index.html
@@ -605,10 +605,11 @@
 			<a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png"></a>
 			<a href="https://www.tum.de/" target="_blank"><img
 					src="images/collabs/TUM_Logo_extern_mt_EN_RGB_neg_p(Christian Djeffal).png"></a>
-			<a href="https://www.iltanet.org/home" target=" _blank"><img src="images/collabs/ILTA-logo-full.png"></a>
+			<a href="https://www.iltanet.org/home" target=" _blank"><img src="images/collabs/ILTA-logo-full.svg"></a>
 			<a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a>
 			<a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a>
-			<a href="https://chancerylaneproject.org/" target="_blank"><img src="images/collabs/TCLP.png"></a>
+			<a href="https://chancerylaneproject.org/" target="_blank"><img
+					src="images/collabs/The_Chancery_Lane_Project.jpg"></a>
 			<a href="https://www.vttresearch.com/en" target=" _blank"><img src="images/collabs/VTT_Orange_Logo.png"></a>
 			<a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target=" _blank"><img
 					src="images/collabs/helsinki-legal-tech-lab.png"></a>
