update EY BF description

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -651,22 +651,18 @@
                 </div>
                 <div class="workshop-card bg-light-turquoise">
                   <h4>Enabling Digital Transformation through Legal Design</h4>
-                  <p>How might we use legal design to solve digital transformation problems? We'll talk about common
-                    pain
-                    points
-                    in digital transformation and how we can address those pain points using legal design. The
-                    interactive
-                    workshop will focus on real cases where EY's clients have dealt with a digital transformation,
-                    exploring
-                    the
-                    ways legal design has and could enable a greater and smoother shift in the digital age.
-
+                  <p>How might we leverage legal design to create successful digital transformation projects within
+                    legal teams and workflows? In this interactive workshop we will present a case, cocreating roadmaps
+                    and possible solutions. We will use methods like interviews, empathy maps and idea generation
+                    techniques and empower participants. Our guests will leave this workshop with real life examples and
+                    skills to execute successful legal transformation.
                   </p>
                   <p><strong>Facilitators:</strong></p>
                   <ul>
                     <li>Carol Hannud, Legal Transformation, Dispute System Design, and Legal Design Senior Executive, EY
-                      (Brazil)</li>
-                    <li> Piia Madissoo, Legal Transform & Operate Lead, EY (Finland)</li>
+                      and
+                      Professor at Fundação Getulio Vargas Law School (Brazil)</li>
+                    <li>Pia Madissoo, Legal Transform & Operate Lead, EY (Finland)</li>
                   </ul>
                 </div>
                 <div class="workshop-card bg-light-turquoise">
