--- a/index.html
+++ b/index.html
@@ -608,8 +608,7 @@
 			<a href="https://www.iltanet.org/home" target=" _blank"><img src="images/collabs/ILTA-logo-full.svg"></a>
 			<a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a>
 			<a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a>
-			<a href="https://chancerylaneproject.org/" target="_blank"><img
-					src="images/collabs/The_Chancery_Lane_Project.jpg"></a>
+			<a href="https://chancerylaneproject.org/" target="_blank"><img src="images/collabs/TCLP.png"></a>
 			<a href="https://www.vttresearch.com/en" target=" _blank"><img src="images/collabs/VTT_Orange_Logo.png"></a>
 			<a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target=" _blank"><img
 					src="images/collabs/helsinki-legal-tech-lab.png"></a>
@@ -617,6 +616,9 @@
 					src="images/collabs/JARGONFREE_logo.jpg"></a>
 			<a href="https://legalshake.com/" target=" _blank"><img src="images/collabs/Legal_Shake.png"></a>
 			<a href="https://legaldesignsummit.com" target=" _blank"><img src="images/collabs/NJLDL-Logo-v1.png"></a>
+			<a href="https://oikeusministerio.fi/en/frontpage" target=" _blank"><img
+					src="images/collabs/OM_eng_RGB.png"></a>
+
 
 			<a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
 				target="_blank"><img src="images/collabs/vanderbilt.png"></a>
@@ -632,6 +634,22 @@
 			<a href="https://www.aalto.fi/en" target=" _blank"><img src="images/collabs/Aalto uni logo.png"></a>
 			<a href="https://www.nulawlab.org/projects/the-east-boston-spatial-justice-lab" target=" _blank"><img
 					src="images/collabs/East Boston Spatial Justice Lab.jpeg"></a>
+
+			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/TiLD Logo ORIGINAL.png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/LawInova_1.png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img
+					src="images/collabs/Constitutional Design Lab1 (Christian Djeffal).png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Digital Law Lab.png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img
+					src="images/collabs/BC Access to Justice Center for Excellence (BC ACE).png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Attorney-at-Code.png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Liquid Legal Institute .png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img
+					src="images/collabs/Lebanese American University.jpg"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img
+					src="images/collabs/Gabne Gabnys Law Firm (Jovita Morta Gabne).png"></a>
+			<a href="legaldesignsummit.com" target=" _blank"><img
+					src="images/collabs/iO_Justice_Logo(LauraMarquez).png"></a>
 			<a href="https://www.linkedin.com/in/nokkonen/" target=" _blank"><img
 					src="images/collabs/kolmas persoona logo (Outi Nokkonen).svg"></a>
 
