--- a/footer.html
+++ b/footer.html
@@ -97,7 +97,7 @@
 
       <div class="container" style="margin-right: 10px; margin-left: 10px; width:max-content;"></div>
       <!-- Content Main Section Begins -->
-      <h3 style="text-align: center; font-size: 24px; margin-top: 40px;">MAKING THE 2025 SUMMIT HAPPEN</h3>
+      <h3 style="text-align: center; font-size: 35px; margin-top: 40px;">MAKING THE 2025 SUMMIT HAPPEN</h3>
 
       <div class="logo-grid">
             <img src="images/collabs/Helsingin-yliopisto-oikis.PNG" alt="Helsingin yliopisto"
@@ -118,7 +118,6 @@
             <h3>In co-operation with:</h3>
             <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
             <div class="logo-grid">
-
                   <a href="https://legaldesign-journal.com/" target="_blank"><img
                               src="images/collabs/Legal Design Journal.JPG" alt="Legal Design Journal"></a>
                   <a href="https://www.hiil.org/" target="_blank"><img
@@ -131,8 +130,7 @@
                               src="images/collabs/ILTA-logo-full.svg"></a>
                   <a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a>
                   <a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a>
-                  <a href="https://chancerylaneproject.org/" target="_blank"><img
-                              src="images/collabs/The_Chancery_Lane_Project.jpg"></a>
+                  <a href="https://chancerylaneproject.org/" target="_blank"><img src="images/collabs/TCLP.png"></a>
                   <a href="https://www.vttresearch.com/en" target=" _blank"><img
                               src="images/collabs/VTT_Orange_Logo.png"></a>
                   <a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target=" _blank"><img
@@ -142,6 +140,9 @@
                   <a href="https://legalshake.com/" target=" _blank"><img src="images/collabs/Legal_Shake.png"></a>
                   <a href="https://legaldesignsummit.com" target=" _blank"><img
                               src="images/collabs/NJLDL-Logo-v1.png"></a>
+                  <a href="https://oikeusministerio.fi/en/frontpage" target=" _blank"><img
+                              src="images/collabs/OM_eng_RGB.png"></a>
+
 
                   <a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
                         target="_blank"><img src="images/collabs/vanderbilt.png"></a>
@@ -158,6 +159,23 @@
                   <a href="https://www.aalto.fi/en" target=" _blank"><img src="images/collabs/Aalto uni logo.png"></a>
                   <a href="https://www.nulawlab.org/projects/the-east-boston-spatial-justice-lab" target=" _blank"><img
                               src="images/collabs/East Boston Spatial Justice Lab.jpeg"></a>
+
+                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/TiLD Logo ORIGINAL.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/LawInova_1.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/Constitutional Design Lab1 (Christian Djeffal).png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Digital Law Lab.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/BC Access to Justice Center for Excellence (BC ACE).png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Attorney-at-Code.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/Liquid Legal Institute .png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/Lebanese American University.jpg"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/Gabne Gabnys Law Firm (Jovita Morta Gabne).png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img
+                              src="images/collabs/iO_Justice_Logo(LauraMarquez).png"></a>
                   <a href="https://www.linkedin.com/in/nokkonen/" target=" _blank"><img
                               src="images/collabs/kolmas persoona logo (Outi Nokkonen).svg"></a>
 
