update BF spam information

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -736,6 +736,8 @@
                       We'll do our best to match you with workshops based on availability, preferences, background, and
                       experience.
                       There is something for everyone in these workshops.
+                      Check your spam filters or add “brainfactory@legaldesignsummit.com” to your safe senders list to
+                      ensure you receive our confirmation emails!
                     </p>
                   </div>
 
