--- a/brainfactory.html
+++ b/brainfactory.html
@@ -614,11 +614,12 @@
                     high-impact areas like access to justice, contract simplification, and legal visualisation. Guided
                     by
                     the
-                    proven Brainfactory × DLA methodology and inspired by lightning talks from legal design pioneers,
+                    proven BrainFactory × DLA methodology and inspired by lightning talks from legal design pioneers and
+                    AI-providers,
                     you’ll
                     ideate, prototype, and pitch ideas that show how AI can make legal systems more human-centered,
                     efficient,
-                    and accessible. With support from leading tech providers, you’ll leave with tangible prototypes -
+                    and accessible. With support from Newcode.ai, you’ll leave with tangible prototypes -
                     and
                     a
                     deeper understanding of the ROI of integrating AI into legal workflows. Whether you're a lawyer, a
@@ -627,7 +628,8 @@
                   </p>
                   <p><strong>Facilitators:</strong></p>
                   <ul>
-                    <li>Mayowa Odusote, DLA Piper</li>
+                    <li>Mayowa Odusote & team, DLA Piper</li>
+                    <li>Maged Helmy, Newcode.ai</li>
 
                   </ul>
                 </div>
